<resources>
    <string name="app_name" translatable="false">adOHRi</string>
    <string name="receiver_off_button_caption">Starten</string>
    <string name="receiver_on_button_caption">Stoppen</string>
    <string name="local_service_started">Empfänger gestartet</string>
    <string name="local_service_stopped">Empfänger gestoppt</string>
    <string name="local_service_label">Audiodeskription</string>
    <string name="notification_content_text">Hier tippen, um die App zu öffnen</string>
    <string name="notification_ticker_text">Empfange Audiodeskription</string>
    <string name="notification_content_title">Audiodeskription</string>
    <string name="notification_channel_name">adOHRi-Benachrichtigungen</string>
    <string name="wifi_connection_lost">WLAN-Verbindung verloren</string>
    <string name="connection_denied">Verbindung abgebrochen</string>
    <string name="connection_failed">Verbindung zum Sender gescheitert</string>
    <string name="headphones_disconnected">Bitte Kopfhörer verbinden</string>
    <string name="info_button">Info</string>
    <string name="title_activity_info">Info</string>
    <string name="adOHRi_logo_alttext">adOHRi-Logo</string>
    <string name="credits">Projektleitung: Agnes Nuber\nAutor: Hubert Popiolek\nim Auftrag der AG Kurzfilm</string>
    <string name="title_activity_licenses">Lizenzen</string>
    <string name="licenses_button">Lizenzen</string>
    <string name="source_code_link">Quellcode</string>
    <string name="homepage_link">Homepage</string>
    <string name="privacy_policy_link">Datenschutzerklärung</string>
    <string name="info_text">adOHRi – Kurzfilme für alle!\n\nDie App adOHRi überträgt die Audiodeskription (AD) von ausgewählten Kurzfilm-Programmen auf dein Ohr. So kannst du im Kino die Filmbeschreibung direkt empfangen und die Vielfalt von Kurzfilmen erleben.\nDie Anzahl der barrierefreien Kurzfilme wird immer größer und immer mehr Kurzfilm-Programme werden von den Verleihern zusammengestellt. Frage im Kino deines Vertrauens nach der Möglichkeit einer barrierefreien Vorführung. Das Ziel ist es, allen Menschen Kurzfilme zugänglich zu machen.\nNimm deine persönlichen Kopfhörer mit ins Kino und starte die App. Die Audiodeskription wird per WLAN auf dein Mobilgerät übertragen. Über dein Mobilgerät kannst du die Lautstärke regeln, so dass du den originalen Filmton über das Audiosystem des Kinosaals und die Audiodeskription über die Kopfhörer erleben kannst.\n\nDer Ton wird nicht über die Lautsprecher des Mobilgerätes übertragen. Achte also darauf, dass deine Kopfhörer angeschlossen sind. Für ein optimales Erlebnis komme mit aufgeladenem Mobilgerät ins Kino und benutze falls möglich kabelgebundene Kopfhörer.\nFür einen optimalen Empfang der Audiodeskription trennt adOHRi dein Mobilgerät möglicherweise vom Internet, bis du die App beendest.\n\nWas ist eine Audiodeskription?\nBei einer Audiodeskription wird der Film in einen Hörfilm verwandelt. Schauplätze, Darsteller, Mimik und Gestik sowie Kameraführung werden von professionellen Hörfilm-Autor*innen in Worte gefasst. Die Bildbeschreibungen sind für blinde und sehbehinderte Zuschauer in den Dialogpausen des Films zu hören.\n\nDiese Maßnahme wurde mitfinanziert mit Steuermitteln auf Grundlage des vom Sächsischen Landtag beschlossenen Haushaltes.</string>
</resources>